; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/virt/kvm/extr_ioapic.c_kvm_ioapic_handles_vector.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/virt/kvm/extr_ioapic.c_kvm_ioapic_handles_vector.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kvm = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { %struct.kvm_ioapic* }
%struct.kvm_ioapic = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @kvm_ioapic_handles_vector(%struct.kvm* %0, i32 %1) #0 {
  %3 = alloca %struct.kvm*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.kvm_ioapic*, align 8
  store %struct.kvm* %0, %struct.kvm** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.kvm*, %struct.kvm** %3, align 8
  %7 = getelementptr inbounds %struct.kvm, %struct.kvm* %6, i32 0, i32 0
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 0
  %9 = load %struct.kvm_ioapic*, %struct.kvm_ioapic** %8, align 8
  store %struct.kvm_ioapic* %9, %struct.kvm_ioapic** %5, align 8
  %10 = call i32 (...) @smp_rmb()
  %11 = load i32, i32* %4, align 4
  %12 = load %struct.kvm_ioapic*, %struct.kvm_ioapic** %5, align 8
  %13 = getelementptr inbounds %struct.kvm_ioapic, %struct.kvm_ioapic* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @test_bit(i32 %11, i32 %14)
  ret i32 %15
}

declare dso_local i32 @smp_rmb(...) #1

declare dso_local i32 @test_bit(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
